feat(web): add listing of facts for parameter edition

--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
@@ -38,7 +38,9 @@
       <div trTabsContent="raw">
         <ng-container #dynamicComponentsContainer></ng-container>
       </div>
-      <div trTabsContent="variable">Use a previous Automation fact</div>
+      <div trTabsContent="variable" class="h-full w-full">
+        <tr-automation-parameter-edit-previous-facts />
+      </div>
     </div>
   </tr-tabs>
 </div>
