--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-previous-facts/automation-parameter-edit-previous-facts.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-previous-facts/automation-parameter-edit-previous-facts.component.html
@@ -1,17 +1,9 @@
 <div
   class="flex flex-col overflow-y-auto max-h-96 bg-secondary rounded-md p-3 space-y-3 border w-full">
   @for (fact of facts(); track fact.identifier) {
-    <div class="p-3 bg-white rounded-md flex flex-col">
-      <span class="tr-large">
-        @if (fact.idx) {
-          {{ fact.idx }} |
-        }
-        {{ fact.eventIdentifier | pascalToPhrase }}</span
-      >
-      <span class="tr-medium text-gray-700">{{
-        fact.identifier | pascalToPhrase
-      }}</span>
-      <span class="tr-small text-muted">{{ fact.description }} </span>
-    </div>
+    <tr-previous-fact-button
+      [fact]="fact"
+      [checked]="parameter().value === fact.identifier"
+      (click)="onFactSelected(fact)" />
   }
 </div>
