feat(web): add filtering of previous facts based on type

--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
@@ -40,6 +40,8 @@
       </div>
       <div trTabsContent="Var" class="h-full w-full">
         <tr-automation-parameter-edit-previous-facts
+          [parameterValueType]="parameterValueType()"
+          [actionIdx]="actionIdx()"
           [parameter]="parameter()"
           (previousFactSelected)="onFactSelected($event)" />
       </div>
