feat(web): force white on all integration svg

--- a/web/src/app/components/buttons/available-integration-button/available-integration-button.component.html
+++ b/web/src/app/components/buttons/available-integration-button/available-integration-button.component.html
@@ -10,7 +10,7 @@
       alt="Integration Logo"
       [width]="24"
       [height]="24"
-      [style.filter]="forceWhite() ? 'brightness(0) invert(1)' : 'none'" />
+      [style.filter]="'brightness(0) invert(1)'" />
   </div>
   <span class="tr-large">{{ integration().name }}</span>
 </button>
