--- a/web/src/app/features/integrations/components/integration-available-card/integration-available-card.component.html
+++ b/web/src/app/features/integrations/components/integration-available-card/integration-available-card.component.html
@@ -9,7 +9,7 @@
         alt="Integration Logo"
         [width]="35"
         [height]="35"
-        [style.filter]="forceWhite() ? 'brightness(0) invert(1)' : 'none'" />
+        [style.filter]="'brightness(0) invert(1)'" />
     </div>
     <h1 class="tr-container-title">{{ name() }}</h1>
   </div>
