--- a/web/src/app/features/integrations/notion/integration-linked-notion/integration-linked-notion.component.html
+++ b/web/src/app/features/integrations/notion/integration-linked-notion/integration-linked-notion.component.html
@@ -15,8 +15,10 @@
         [ngSrc]="iconUri() || ''"
         alt="Notion Logo"
         class="rounded-full"
-        [width]="12"
-        [height]="12" />
+        [width]="10"
+        [height]="10"
+        [style.filter]="'brightness(0) invert(1)'"
+      />
     </div>
   </div>
   <div class="flex flex-col ml-4 mr-auto">
