--- a/web/src/app/features/integrations/components/integration-add-dialog/integration-add-dialog.component.html
+++ b/web/src/app/features/integrations/components/integration-add-dialog/integration-add-dialog.component.html
@@ -100,8 +100,11 @@
               Link Integration
             </button>
           }
-          @if (selectedIntegration()?.name === IntegrationTypeEnum.OPENAI) {
+          @if (selectedIntegration()?.identifier === IntegrationTypeEnum.OPENAI) {
             <tr-openai-link-form />
+          }
+          @if (selectedIntegration()?.identifier === IntegrationTypeEnum.LEAGUE_OF_LEGENDS) {
+            <tr-league-of-legends-link-form />
           }
         </div>
       </div>
