feat(web): add league of legends linked account

--- a/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
+++ b/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
@@ -18,5 +18,11 @@
         [iconUri]="iconUri()"
         [color]="color()" />
     }
+    @case (IntegrationTypeEnum.LEAGUE_OF_LEGENDS) {
+      <tr-integration-linked-league-of-legends
+        [integration]="integration()"
+        [iconUri]="iconUri()"
+        [color]="color()" />
+    }
   }
 </div>
