feat(web): add float only input

--- a/web/src/app/features/integrations/components/integration-add-dialog/integration-add-dialog.component.html
+++ b/web/src/app/features/integrations/components/integration-add-dialog/integration-add-dialog.component.html
@@ -100,10 +100,15 @@
               Link Integration
             </button>
           }
-          @if (selectedIntegration()?.identifier === IntegrationTypeEnum.OPENAI) {
+          @if (
+            selectedIntegration()?.identifier === IntegrationTypeEnum.OPENAI
+          ) {
             <tr-openai-link-form />
           }
-          @if (selectedIntegration()?.identifier === IntegrationTypeEnum.LEAGUE_OF_LEGENDS) {
+          @if (
+            selectedIntegration()?.identifier ===
+            IntegrationTypeEnum.LEAGUE_OF_LEGENDS
+          ) {
             <tr-league-of-legends-link-form />
           }
         </div>
