--- a/web/src/app/features/integrations/openai/openai-link-form/openai-link-form.component.html
+++ b/web/src/app/features/integrations/openai/openai-link-form/openai-link-form.component.html
@@ -1,9 +1,6 @@
 <div class="bg-white flex items-center justify-center border rounded-md p-4">
   <div class="p-6 w-full">
-    <form
-      class="space-y-6"
-      (ngSubmit)="link()"
-      [formGroup]="openaiForm">
+    <form class="space-y-6" (ngSubmit)="link()" [formGroup]="openaiForm">
       <div>
         <label trLabel for="apiKey">API Key</label>
         <input
