--- a/web/src/app/features/integrations/league-of-legends/league-of-legends-link-form/league-of-legends-link-form.component.html
+++ b/web/src/app/features/integrations/league-of-legends/league-of-legends-link-form/league-of-legends-link-form.component.html
@@ -18,7 +18,8 @@
       <div>
         <label for="tagLine" trLabel> Tag Line </label>
         <div class="flex flex-row">
-          <div class="bg-secondary rounded-md rounded-r-none border px-3 flex justify-center items-center">
+          <div
+            class="bg-secondary rounded-md rounded-r-none border px-3 flex justify-center items-center">
             <span class="tr-large text-gray-500">#</span>
           </div>
           <input
