--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -10,9 +10,7 @@
         <h3 class="tr-title-2">{{ automation().label }}</h3>
         <span class="text-muted">{{ automation().description }}</span>
       </div>
-      <button trBtn class="ml-auto p-2" variant="outline">
-        <ng-icon name="heroCog6Tooth" size="1.4rem" />
-      </button>
+      <tr-general-edit-dialog class="ml-auto" />
       <button trBtn class="w-32">Save</button>
     </div>
     <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
