feat(web): add saving of description and label, also add invalid icon when an action or trigger don't have valid params

--- a/web/src/app/features/automations/workspace/components/cards/action-card/action-card.component.html
+++ b/web/src/app/features/automations/workspace/components/cards/action-card/action-card.component.html
@@ -12,5 +12,12 @@
       </div>
     }
     <span class="tr-container-title">{{ name() }}</span>
+    @if (paramsInvalid()) {
+      <ng-icon
+        name="heroExclamationTriangle"
+        size="1.5rem"
+        strokeWidth="0.15rem"
+        class="text-red-500 ml-auto" />
+    }
   </div>
 }
