--- a/web/src/app/features/automations/workspace/components/general-edit-dialog/general-edit-dialog.component.html
+++ b/web/src/app/features/automations/workspace/components/general-edit-dialog/general-edit-dialog.component.html
@@ -87,7 +87,8 @@
             trBtn
             type="submit"
             [disabled]="!form.dirty || form.invalid"
-            class="min-w-[100px]">
+            class="min-w-[100px]"
+            brnDialogClose>
             Save changes
           </button>
         </div>
