--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -11,7 +11,7 @@
         <span class="text-muted">{{ automation().description }}</span>
       </div>
       <tr-general-edit-dialog class="ml-auto" />
-      <button trBtn class="w-32" [disabled]="!canSave()">Save</button>
+      <button trBtn class="w-32" [disabled]="!canSave()" (click)="onSave()">Save</button>
     </div>
     <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
       <div class="flex flex-col w-full items-center">
