feat(web): add about us page

--- a/web/src/app/features/public/public-layout/public-layout.component.html
+++ b/web/src/app/features/public/public-layout/public-layout.component.html
@@ -32,6 +32,12 @@
           class="px-3 py-2 rounded-md tr-container-title">
           FAQ
         </a>
+        <a
+          routerLink="/about-us"
+          routerLinkActive="text-primary"
+          class="px-3 py-2 rounded-md tr-container-title">
+          About Us
+        </a>
       </div>
 
       <div class="flex items-center space-x-4">
