feat(mobile): add ability to download client.apk

--- a/web/src/app/features/public/downloads/downloads.page.html
+++ b/web/src/app/features/public/downloads/downloads.page.html
@@ -26,14 +26,15 @@
       <button
         trBtn
         class="flex flex-row items-center justify-center flex-1"
-        size="lg">
+        size="lg"
+        (click)="navigateToAPK()">
         <img
           ngSrc="icons/android_icon.svg"
           alt="App Store Icon"
           width="22"
           height="22"
           class="mr-2" />
-        <span>Download for Android</span>
+        Download for Android
       </button>
     </div>
 
