feat(web): add github integration linked card

--- a/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
+++ b/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
@@ -24,5 +24,11 @@
         [iconUri]="iconUri()"
         [color]="color()" />
     }
+    @case (IntegrationTypeEnum.GITHUB) {
+      <tr-integration-linked-github
+        [integration]="integration()"
+        [iconUri]="iconUri()"
+        [color]="color()" />
+    }
   }
 </div>
