feat(web): add accessibility improvements

--- a/web/src/app/components/pagination/pagination.component.html
+++ b/web/src/app/components/pagination/pagination.component.html
@@ -1,6 +1,7 @@
 <div class="flex">
   <button
     trBtn
+    aria-label="previous"
     variant="outline"
     size="sm"
     class="mr-2.5 justify-center disabled:bg-secondary disabled:border-none"
@@ -93,6 +94,7 @@
   </div>
   <button
     trBtn
+    aria-label="next"
     variant="outline"
     size="sm"
     class="ml-2.5 disabled:bg-secondary disabled:border-none"
