--- a/web/src/app/features/authentication/login/login.page.html
+++ b/web/src/app/features/authentication/login/login.page.html
@@ -5,16 +5,18 @@
       <img
         ngSrc="icons/triggo_logo.svg"
         alt="Triggo Box Logo"
-        width="160"
-        height="120"
-        class="mb-3"
+        width="215"
+        height="72"
+        class="mb-3 w-40 h-auto"
         priority />
       <h2 class="tr-title-3 text-center mb-3">Welcome back!</h2>
       <tr-login-form class="w-full" />
       <div class="mt-4 text-center">
         <p class="text-sm text-gray-600">
           Don't have an account?
-          <a routerLink="/register" class="text-primary hover:underline"
+          <a
+            routerLink="/register"
+            class="text-primary underline hover:text-primary/90"
             >Register</a
           >
         </p>
