--- a/web/src/app/features/authentication/register/register.page.html
+++ b/web/src/app/features/authentication/register/register.page.html
@@ -6,7 +6,11 @@
       <div class="mt-4 text-center">
         <p class="text-sm text-gray-600">
           Already have an account?
-          <a routerLink="/login" class="text-primary hover:underline">Login</a>
+          <a
+            routerLink="/login"
+            class="text-primary underline hover:text-primary/90"
+            >Login</a
+          >
         </p>
       </div>
       <tr-oauth-section />
