--- a/web/src/app/features/automations/workspace/components/edit-sheets/select-trigger-sheet/select-trigger-sheet.component.html
+++ b/web/src/app/features/automations/workspace/components/edit-sheets/select-trigger-sheet/select-trigger-sheet.component.html
@@ -105,6 +105,7 @@
       ) {
         <button
           trBtn
+          aria-label="Save Automation"
           brnSheetClose
           type="submit"
           class="w-[50%] flex flex-row gap-2 items-center"
