--- a/web/src/app/features/automations/workspace/components/general-edit-dialog/general-edit-dialog.component.html
+++ b/web/src/app/features/automations/workspace/components/general-edit-dialog/general-edit-dialog.component.html
@@ -1,6 +1,7 @@
 <tr-dialog>
   <button
     brnDialogTrigger
+    aria-label="Edit Automation"
     trBtn
     class="ml-auto p-2 rounded-md transition-colors"
     variant="outline">
