--- a/web/src/app/features/public/about-us/about-us.page.html
+++ b/web/src/app/features/public/about-us/about-us.page.html
@@ -40,7 +40,7 @@
                 <div class="flex flex-row items-center gap-2">
                   @for (title of member.titles; track title) {
                     <div
-                      class="inline-flex px-3 py-1 rounded-full bg-primary/10 text-primary text-sm">
+                      class="inline-flex px-3 py-1 rounded-full bg-primary text-white text-sm">
                       {{ title }}
                     </div>
                   }
@@ -63,7 +63,7 @@
                 <div class="flex flex-row items-center gap-2">
                   @for (title of member.titles; track title) {
                     <div
-                      class="inline-flex px-3 py-1 rounded-full bg-primary/10 text-primary text-sm">
+                      class="inline-flex px-3 py-1 rounded-full bg-primary text-white text-sm">
                       {{ title }}
                     </div>
                   }
