--- a/web/src/app/features/settings/settings.page.html
+++ b/web/src/app/features/settings/settings.page.html
@@ -44,8 +44,7 @@
       <button
         trBtn
         (click)="logout()"
-        variant="destructive"
-        class="flex flex-row items-center gap-1">
+        class="flex flex-row items-center gap-1 text-white bg-red-600 hover:bg-red-500 transition-colors">
         <ng-icon
           size="1.1rem"
           strokeWidth="0.12rem"
