--- a/web/libs/triggo-ui/form/password/tr-form-password.component.html
+++ b/web/libs/triggo-ui/form/password/tr-form-password.component.html
@@ -12,12 +12,12 @@
     type="button"
     (click)="togglePasswordVisibility()"
     [attr.aria-label]="isPasswordVisible() ? 'Hide password' : 'Show password'"
-    class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
+    class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700 p-2">
     @if (isPasswordVisible()) {
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        width="18"
-        height="18"
+        width="20"
+        height="20"
         viewBox="0 0 24 24"
         fill="none"
         stroke="currentColor"
@@ -30,8 +30,8 @@
     } @else {
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        width="18"
-        height="18"
+        width="20"
+        height="20"
         viewBox="0 0 24 24"
         fill="none"
         stroke="currentColor"
