--- a/web/src/app/features/automations/workspace/components/add-step-button/add-step-button.component.html
+++ b/web/src/app/features/automations/workspace/components/add-step-button/add-step-button.component.html
@@ -1,3 +1,6 @@
-<button trBtn class="flex items-center justify-center px-2.5">
+<button
+  trBtn
+  class="flex items-center justify-center px-2.5"
+  aria-label="Add new Automation step">
   <ng-icon name="heroPlus" size="1.3rem" strokeWidth="0.15rem" />
 </button>
