feat(web): add base layout for home page

--- a/web/src/app/features/public/about-us/about-us.page.html
+++ b/web/src/app/features/public/about-us/about-us.page.html
@@ -27,7 +27,7 @@
       <h2 class="tr-title-2 text-center">Meet Our Team</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-12 w-full">
-        <div class="bg-white rounded-xl p-8 border">
+        <div class="bg-white rounded-md p-8 border">
           <div class="rounded-md p-2 bg-primary mb-6">
             <span class="tr-large text-white">Backend Team</span>
           </div>
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <div class="bg-white rounded-xl p-8 border">
+        <div class="bg-white rounded-md p-8 border">
           <div class="rounded-md p-2 bg-primary mb-6">
             <span class="tr-large text-white">Frontend Team</span>
           </div>
