--- a/web/src/app/features/home/home.page.html
+++ b/web/src/app/features/home/home.page.html
@@ -1,3 +1,42 @@
-<div class="flex flex-col">
+<div class="flex flex-col h-full">
   <h1 class="tr-title-1">Home</h1>
+  <div class="flex flex-col items-center bg-secondary flex-grow rounded-md p-6">
+    <div class="text-center mb-8">
+      <h1 class="tr-title-1">Welcome, Jinx!</h1>
+      <p class="tr-subtitle text-muted">We're glad to have you back</p>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12 w-full">
+      <div class="bg-white rounded-md border p-6 w-full text-center">
+        <h2 class="text-2xl font-semibold text-gray-800 mb-4">
+          🎉 Check Out Our New Mobile App!
+        </h2>
+        <p class="text-gray-600 mb-4">
+          Now you can access your dashboard on the go. Download our new mobile
+          app today and enjoy seamless access to all your features!
+        </p>
+      </div>
+
+      <div class="bg-white rounded-md border p-6 w-full text-center">
+        <h2 class="text-xl font-semibold text-gray-800 mb-4">
+          📄 Documentation
+        </h2>
+        <p class="text-gray-600 mb-4">
+          Need help? Check out our user and developer documentation to get
+          started.
+        </p>
+        <div class="flex justify-center gap-6">
+          <a
+            href="/user-docs"
+            class="text-primary underline hover:text-primary/90 transition-colors">
+            User Documentation
+          </a>
+          <a
+            href="/dev-docs"
+            class="text-primary underline hover:text-primary/90 transition-colors">
+            Developer Documentation
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
