--- a/web/src/app/features/home/automation-template-card/automation-template-card.component.html
+++ b/web/src/app/features/home/automation-template-card/automation-template-card.component.html
@@ -1,11 +1,9 @@
 <div
-  class="flex flex-col bg-white rounded-md border p-6 w-full items-left">
-  <div class="flex flex-row items-center gap-2">
-    <tr-icon-box [icon]="icon()" [color]="color()" />
-    <h3 class="tr-large">{{ name() }}</h3>
-  </div>
-  <p class="text-muted tr-medium mb-3">
+  class="flex flex-col bg-white rounded-md border p-6 w-full items-center space-y-3">
+  <tr-icon-box [icon]="icon()" [color]="color()" />
+  <h3 class="tr-large flex items-center">{{ name() }}</h3>
+  <p class="text-muted tr-medium text-center">
     {{ description() }}
   </p>
-  <button trBtn>Use Template</button>
+  <button trBtn class="w-full">Use Template</button>
 </div>
