--- a/web/src/app/features/home/home.page.html
+++ b/web/src/app/features/home/home.page.html
@@ -1,16 +1,16 @@
 <div class="flex flex-col h-full">
   <h1 class="tr-title-1">Home</h1>
   <div class="flex flex-col items-center bg-secondary flex-grow rounded-md p-6">
-    <div class="text-center mb-8">
-      <h1 class="tr-title-1">Welcome, Jinx!</h1>
+    <div class="text-center mb-4">
+      <h1 class="tr-title-1">Welcome, {{ user?.firstName || '' }}!</h1>
       <p class="tr-subtitle text-muted">We're glad to have you back</p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-12 w-full mb-4">
       <div
         class="flex flex-col bg-white rounded-md border p-6 w-full text-center items-center">
-        <div class="flex flex-row items-center gap-2">
-          <tr-icon-box icon="heroSparklesSolid" color="bg-primary" />
+        <tr-icon-box icon="heroSparklesSolid" color="bg-primary" class="mb-2" />
+        <div class="flex flex-row items-center justify-center gap-2">
           <h2 class="tr-title-3 mb-3">Check Out Our Mobile App!</h2>
         </div>
         <p class="text-muted mb-3">
@@ -18,7 +18,7 @@
           your features!
         </p>
         <a
-          href="/user-docs"
+          routerLink="/downloads"
           class="text-primary underline hover:text-primary/90 transition-colors mt-auto">
           Downloads
         </a>
@@ -26,8 +26,8 @@
 
       <div
         class="flex flex-col bg-white rounded-md border p-6 w-full text-center items-center">
+        <tr-icon-box icon="heroDocumentSolid" color="bg-primary" class="mb-2" />
         <div class="flex flex-row items-center gap-2">
-          <tr-icon-box icon="heroDocumentSolid" color="bg-primary" />
           <h2 class="tr-title-3 mb-3">Documentation</h2>
         </div>
         <p class="text-muted mb-3">
@@ -36,19 +36,19 @@
         </p>
         <div class="flex justify-center gap-6">
           <a
-            href="/user-docs"
+            href="https://scientific-slice-efe.notion.site/Triggo-User-Documentation-18061b122ab480768eeeeed7a527b572"
             class="text-primary underline hover:text-primary/90 transition-colors">
             User Documentation
           </a>
           <a
-            href="/dev-docs"
+            href="https://scientific-slice-efe.notion.site/Triggo-Frontend-Dev-Documentation-18061b122ab480308395cb813e5632a6"
             class="text-primary underline hover:text-primary/90 transition-colors">
             Developer Documentation
           </a>
         </div>
       </div>
     </div>
-    <span class="tr-title-3 flex items-left text-left mb-6"
+    <span class="tr-title-3 flex items-left text-left mb-2"
       >User Automation Templates</span
     >
     <div class="grid grid-cols-1 md:grid-cols-3 gap-12 w-full">
@@ -58,15 +58,15 @@
         name="Download All Attachments"
         description="Download all attachments from an email to your Google Drive." />
       <tr-automation-template-card
-        icon="heroArrowCircleDownSolid"
-        color="bg-blue-500"
-        name="Download All Attachments"
-        description="Download all attachments from an email to your Google Drive." />
+        icon="heroAcademicCapSolid"
+        color="bg-yellow-500"
+        name="Synthesize Notes"
+        description="Take control of your studies, and ace all your tests." />
       <tr-automation-template-card
-        icon="heroArrowCircleDownSolid"
-        color="bg-blue-500"
-        name="Download All Attachments"
-        description="Download all attachments from an email to your Google Drive." />
+        icon="heroAtSymbolSolid"
+        color="bg-green-500"
+        name="Email Automation"
+        description="Send AI generated emails for your company." />
     </div>
   </div>
 </div>
