feat(web): add gmail integration to frontend

--- a/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
+++ b/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
@@ -30,5 +30,11 @@
         [iconUri]="iconUri()"
         [color]="color()" />
     }
+    @case (IntegrationTypeEnum.GMAIL) {
+      <tr-integration-linked-gmail
+        [integration]="integration()"
+        [iconUri]="iconUri()"
+        [color]="color()" />
+    }
   }
 </div>
